[package]
name = "stylers"
version = "0.3.1"
edition = "2021"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS for Rust web frameworks like leptos"
keywords = ["web", "css", "leptos"]
categories = ["web-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0" }
levenshtein = "1.0.5"
litrs = "0.4.0"
