[package]
name = "stylers"
version = { workspace = true }
edition = "2021"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS for Rust web frameworks like leptos"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0" }
