[package]
name = "stylers"
version = { workspace = true }
edition = "2021"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS for Rust web frameworks like leptos"
readme = "../README.md"

[dependencies]
glob = "0.3.1"
syn = { version = "2.0.15", features = ["full"] }
stylers_core = { path = "../stylers_core" }
stylers_macro = { path = "../stylers_macro" }
proc-macro2 = "1.0.60"
