[package]
name = "stylers"
version = "1.0.0-alpha"
edition = "2021"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS for Rust web frameworks like leptos"
keywords = ["web", "css", "leptos"]
categories = ["web-programming"]
readme = "../README.md"

[dependencies]
glob = "0.3.1"
syn = { version = "2.0.15", features = ["full"] }
stylers_core = "1.0.0-alpha"
stylers_macro = "1.0.0-alpha"
proc-macro2 = "1.0.60"
rstml = "0.11.2"
