[package]
name = "stylers_build"
version = { workspace = true }
edition = "2021"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS for Rust web frameworks like leptos"
readme = "../README.md"


[build-dependencies]
syn = { version = "2.0.15", features = ["full"] }
glob = "0.3.1"
