[package]
name = "style_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.2", features = ["csr"] }
gloo = "0.10.0"
stylers = { path = "../../stylers" }

[build-dependencies]
stylers = { path = "../../stylers" }
