[package]
name = "style_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git" }
stylers = { path = "../../stylers" }

[build-dependencies]
stylers_build = { path = "../../stylers_build" }
