[package]
name = "style_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.9" }
stylers = { path = "../../stylers" }
gloo = "0.8.0"

[build-dependencies]
stylers = { path = "../../stylers" }
