[package]
name = "style_parent_child"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.9", features = ["csr"] }
stylers = { path = "../../stylers" }

[build-dependencies]
stylers = { path = "../../stylers" }
