[package]
name = "style_sheet_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos.git", features = ["csr"]  }
stylers = { path = "../../stylers" }
